# zpgen

./: .gitignore  CLAUDE.md  ZPGenHolo  ZPsource47_01242017.cpp  make-holo.sh  make.m  make.sh  smallzp.gds.gds  zpGenPlus.cpp
.claude/: settings.local.json
.context/: memory-investigation.md  merged-polygon.md  rust-wasm-migration-plan.md
ZPGenHolo.dSYM/Contents/Resources/DWARF/: ZPGenHolo
src/: README.txt  ZPGenHolo  helloworld  helloworld.cpp  make-holo.sh  makeUnitTests.sh  patternFileUtils.cpp  patternFileUtils.h  zpGenHolo.cpp  zpGenHolo.cpp.backup  zpGenPlus.cpp  zpGenPlus.h  zpUtils.cpp  zpUtils.h  zpgeomUnitTests  zpgeomUnitTests.cpp
src/ZPGenHolo.dSYM/Contents/: Info.plist
src/old/: README.md  ZPSourceHW.cpp
src/zpGenPlus.dSYM/Contents/: Info.plist
test-scripts/: holo-test.sh  monitor-memory.sh  test-aperture-mask.sh  test-buttressing.sh  test-large-zp.sh  test-max-vertices.sh  test-merged-polygon.gds.txt  test-merged-polygon.sh  test-mixed-zones.sh  test-offaxis-zp.sh  test-serm.sh  test-spiral-phase.sh
test-scripts/deprecated/: test-merged-polygon.sh  test-obs.sh  test-serm-obs-notilt.sh  test-serm.sh  test-small-zp.sh
zpgen-wasm/: .gitignore  COMMIT_GUIDE.md  Cargo-native.toml  Cargo.toml  DEPLOYMENT.md  PROGRESS.md  README.md  SUCCESS.md  TEST_RESULTS.md  build-wasm.sh  libtransforms.rlib  start-server.sh
zpgen-wasm/examples/: test_native.rs
zpgen-wasm/examples/browser/: index.html
zpgen-wasm/src/: gds.rs  geometry.rs  lib.rs  solver.rs  transforms.rs  wasm.rs  zernike.rs  zpgen.rs
zpgen-wasm/tests/: test_generation.rs
(+5 files in other folders)
