[package]
name = "zpgen-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.45"
js-sys = "0.3.22"
web-sys = { version = "0.3.22", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"

[profile.release]
opt-level = 3
lto = true
